# openE57

./: .clang-format  .codecov.yml  .gitignore  CHANGELOG.md  CHANGES.TXT  CMakeLists.txt  CONTRIBUTORS.txt  LICENSE  LICENSE.libE57  README.md  conanfile.py  conanfile.txt  workflow.sh
.dev/: Dockerfile
.github/: CODEOWNERS
.github/workflows/: build-unix.yml  build-win.yml  build.yml  coverage.yml  gcc.yml
cmake/: clang_format.cmake  compiler_options.cmake  dependencies.cmake
doc/: E57SimpleAPIReleaseNotes.doc  libE57ReleaseNotes.doc
doc/FoundationAPI/: CMakeLists.txt  Doxyfile  Doxyfile.in
doc/FoundationAPI/examples/: BlobCreate.cpp  Cancel.cpp  CheckInvariant.cpp  CompressedVectorCreate.cpp  E57ExceptionFunctions.cpp  Extensions.cpp  FloatCreate.cpp  HelloWorld.cpp  ImageFileDump.cpp  IntegerCreate.cpp  NameParse.cpp  NodeFunctions.cpp  RawXML.cpp  ScaledIntegerCreate.cpp  SourceDestBufferFunctions.cpp  SourceDestBufferNumericCreate.cpp  SourceDestBufferStringCreate.cpp  StringCreate.cpp  StructureCreate.cpp  VectorCreate.cpp  VectorFunctions.cpp  Versions.cpp
doc/SimpleAPI/: CMakeLists.txt  Doxyfile  Doxyfile.in
doc/api/: Doxyfile.in
examples/: CMakeLists.txt  DemoRead01.cpp  DemoWrite01.cpp
include/: config.h.in
include/openE57/: E57Foundation.h  E57Simple.h  openE57.h  openE57Simple.h
include/openE57/LAS/: LASReader.h  openE57las.h
include/openE57/impl/: E57FoundationImpl.h  E57SimpleImpl.h  openE57Impl.h  openE57SimpleImpl.h
include/openE57/time_conversion/: basictypes.h  gnss_error.h  time_conversion.h
src/: CMakeLists.txt  E57Foundation.cpp  E57FoundationImpl.cpp  E57Simple.cpp  E57SimpleImpl.cpp  openE57.cpp  openE57Impl.cpp  openE57Simple.cpp  openE57SimpleImpl.cpp
src/LAS/: LASReader.cpp
src/cmake/: clang_format.cmake  compiler_options.cmake  coverage.cmake  dependencies.cmake  doxygen.cmake  xml_backend.cmake
src/doc/FoundationAPI/: CMakeLists.txt
src/doc/SimpleAPI/: CMakeLists.txt
src/examples/: CMakeLists.txt  DemoRead01.cpp  DemoWrite01.cpp
src/lib/: CMakeLists.txt
src/lib/include/openE57/: api.h  openE57.h  openE57Simple.h
src/lib/include/openE57/LAS/: openE57las.h
src/lib/include/openE57/impl/: crc.h  openE57Impl.h  openE57SimpleImpl.h  time_conversion.h
src/lib/include/openE57/xml/: xml_backend.hpp  xml_traits.hpp
src/lib/include/openE57/xml/backends/: libxml2_traits.hpp  pugi_traits.hpp  xerces_traits.hpp
src/lib/src/: api.cpp  openE57.cpp  openE57Impl.cpp  openE57Simple.cpp  openE57SimpleImpl.cpp  openE57las.cpp  time_conversion.cpp
src/lib/test/: api_time_conversion_test.cpp  compressed_vector_test.cpp  concurrent_parsing_test.cpp  date_time_test.cpp  datetime_utilities_test.cpp  e57_golden_test.cpp  error_handling_test.cpp  exception_utilities_test.cpp  image2d_io_test.cpp  image2d_test.cpp  imagefile_test.cpp  impl_paths_test.cpp  las_reader_comprehensive_test.cpp  las_reader_test.cpp  modern_api_test.cpp  node_advanced_test.cpp  scaled_integer_blob_test.cpp  simple_api_advanced_test.cpp  simple_impl_comprehensive_test.cpp  source_dest_buffer_types_test.cpp  structure_vector_test.cpp  terminal_nodes_test.cpp  test_utils.h  time_conversion_comprehensive_test.cpp  time_conversion_test.cpp
src/refimpl/: E57RefImplConfig.cmake
src/time_conversion/: time_conversion.c
src/tools/: CMakeLists.txt  e57fields.cpp  e57unpack.cpp  e57validate.cpp  e57xmldump.cpp  las2e57.cpp
src/tools/time_conversion/: constants.h  gnss_error.h  time_conversion.c
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tools/: CMakeLists.txt  e57fields.cpp  e57unpack.cpp  e57validate.cpp  e57xmldump.cpp  las2e57.cpp
